<package>
	<name>bbot_sound</name>
	<version>0.0.0</version>
	<description>The bbot_sound meta package</description>

	<maintainer email="kravtandr@gmail.com">kravtandr</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>bbot_speech_to_text</run_depend>
	<run_depend>bbot_text_to_speech</run_depend>
	<run_depend>bbot_speech_command</run_depend>

	<export>
		<metapackage/>
	</export>
</package>
